--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: sans-serif;
   text-align: center;
-  background-color: #f2f2f2;
+  background-color: #301934;
   color: #333;
   padding: 50px;
 }
